--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.9.2",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
