--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,12 @@
 {
-  "extends": [
-    "airbnb-base"
-  ],
+  "extends": ["airbnb-base"],
   "env": {
     "browser": true,
     "node": true,
     "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020
   },
   "rules": {
     "import/extensions": "off",
